--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Demo</title>
+        <link href="styles/style.css" rel="stylesheet" />
     </head>
     <body>
         <h1>Heading</h1>
