--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Demo</title>
-        <link href="styles/style.css" rel="stylesheet" />
+        <link  rel="stylesheet" href="styles/style.css">
     </head>
     <body>
         <h1>Heading</h1>
